@@ -1,6 +1,8 @@
 CHANGELOG
 2014.10.09
-- reduced .hex file size from 44265 to 44093 byte
+- reduced .hex file size from 44265 to 44175 byte
+- added infolight logic for VERB and NOUN
+- combines switch() statements for VERB and NOUN in dsky_updateDisplayData()
 - change infoLights again:
     - let the three MSBs from sr5 go to waste
 	- add 6th and 7th shift registers solely for the infoLights
